# gakumas-assistant

./: .gitattributes  .gitignore  .gitmodules  README.md  app.py  build.bat  build_app.py  config.py  requirements.build.cn.txt  requirements.build.txt  requirements.cn.txt  requirements.dev.cn.txt  requirements.dev.txt  requirements.txt  start_app.bat
.run/: app (No Webview).run.xml  app.run.xml  build.run.xml  view.run.xml  打包便携版.run.xml  打包独立版.run.xml
devtools/: generate_game_database_schemas.py  hsv_tools.py  model_export.py  supplement_game_database_analysis.py
docs/: game_database_format_analysis.md  use_script.md
model/: base_ui.onnx  base_ui.pt  base_ui_meta.json  clip_visual.onnx  producer.onnx  producer_meta.json
scripts/: build_maatouch.sh  build_minitouch.sh  run_produce_debug.py
src/: main.py
tests/: LLM_test.py  contest_item_test.py  data_structure_analysis_tools.py  disabled_test.py  get_contest_item_test.py  get_modal_item_info_test.py  hsv_tools.py  install_DroidCast.py  (+5 more)
train/gakumas_rl/: .gitignore  pyproject.toml
train/gakumas_rl/gakumas_rl/: api.py  auto_training.py  backends.py  bc_pretrain.py  data.py  demo_exam.py  envs.py  exam_runtime.py  idol_config.py  inference_api.py  inference_service.py  llm_player.py  loadout.py  produce_item_interpreter.py  produce_runtime.py  reward_config.py  rllib_model.py  service.py  train.py  trainer.py
train/gakumas_rl/gakumas_rl/prompts/: state_snapshot.jinja2
train/gakumas_rl/gakumas_rl/webapp/: test_report_rllib_nia_master_800000.json
train/gakumas_rl/scripts/: fetch_help_content_pages.py
(+547 files in other folders)
