[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gakumas-rl"
version = "0.1.0"
description = "Standalone Gakumas RL training and simulation package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
  "Jinja2>=3.1",
  "openai>=1.68",
]

[project.optional-dependencies]
env = ["gymnasium>=0.29"]
torch = ["torch>=2.2"]
api = ["fastapi>=0.110", "pydantic>=2.7"]
sb3 = ["stable-baselines3>=2.3"]
rllib = ["ray[rllib]>=2.9"]
full = [
  "gymnasium>=0.29",
  "torch>=2.2",
  "fastapi>=0.110",
  "pydantic>=2.7",
  "stable-baselines3>=2.3",
  "ray[rllib]>=2.9",
]

[project.scripts]
gakumas-rl = "gakumas_rl.train:main"
gakumas-rl-demo = "gakumas_rl.demo_exam:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gakumas_rl*"]
